Item overflow fixed

--- a/src/components/main/inventorybuilder/ItemGalery/ActiveGallery/Armor/Armor.module.css
+++ b/src/components/main/inventorybuilder/ItemGalery/ActiveGallery/Armor/Armor.module.css
@@ -3,6 +3,7 @@
   height: 100%;
   /* background-color: gray; */
   display: flex;
+  padding: 0;
 }
 
 .itemGrid {
@@ -10,10 +11,13 @@
   /* background-color: red; */
   display: flex;
   flex-direction: column;
+  height: 100%;
+  max-height: 412.3px;
+  overflow-y: scroll;
 }
 
 .selectBar {
-  width: calc(20% + 1px);
+  width: 20%;
   border-left: 1px solid var(--border);
   display: flex;
   flex-direction: column;
@@ -21,6 +25,8 @@
   align-items: center;
   justify-content: space-between;
   height: 100%;
+  overflow: hidden;
+  z-index: 10;
 }
 
 .gearCta {
@@ -74,10 +80,27 @@
   flex: 1;
   display: flex;
   flex-wrap: wrap;
+  overflow-y: scroll;
+  /* margin-right: -5px; */
 }
 
 .gridItem {
   width: 25%;
-  height: 50px;
-  border: 1px solid gray;
+  height: 75px;
+  /* border: 1px solid gray; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.gridIcon {
+  width: 36px;
+  height: 36px;
+  object-fit: contain;
+}
+
+.gridItem:hover {
+  background-color: rgba(128, 128, 128, 0.102);
 }
